2022-05-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.58 released.

	* glep-mode.el (glep-mode-insert-skeleton): Update URL in comment.

	* ebuild-mode.el (ebuild-mode-get-keywords): Restore trivial
	compatibility code, allowing continued support for XEmacs 21.4.
	This reverts the change of 2022-04-28.

	* ebuild-mode-keywords.el (ebuild-mode-keywords): Provide feature.
	* ebuild-mode.el (ebuild-mode-keywords): Require it.

	* ebuild-mode.el (ebuild-mode-collect-equal-cdrs): Evaluate with
	eval-when-compile instead of eval-and-compile.

2022-05-03  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: Use ebuild-mode-keywords-eclass as a
	single variable for all eclass keywords.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.
	(ebuild-mode-keywords-eapi4, ebuild-mode-keywords-eapi5)
	(ebuild-mode-keywords-eapi6, ebuild-mode-keywords-eapi7)
	(ebuild-mode-keywords-functions-default): Remove variables.
	(ebuild-mode-keywords-0): Include their keywords here.
	(ebuild-mode-keywords-functions-eapi2)
	(ebuild-mode-keywords-functions-eapi4): Remove variables.
	(ebuild-mode-keywords-functions): Include their keywords here.
	* ebuild-mode.el (ebuild-mode-font-lock-keywords): List variables
	explicitly, instead of collecting their names from the obarray.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-0):
	Add EXPORT_FUNCTIONS which was missing.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-warn): Drop some
	obsolete keywords. Update URL in comment.
	(ebuild-mode-keywords-eclass-deprecated): Remove variable.
	All these functions are long gone.

2022-05-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Remove.
	(ebuild-mode-font-lock-keywords): Inline its code.

	* ebuild-mode.el (ebuild-repo-mode, find-file-hook): Use ' rather
	than #' for quoting of function names.
	* glep-mode.el (glep-mode): Ditto.

2022-04-30  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.57 released.
